--- a/KGERP/Views/Procurement/ProcurementPurchaseOrderSlave.cshtml
+++ b/KGERP/Views/Procurement/ProcurementPurchaseOrderSlave.cshtml
@@ -350,7 +350,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3 d-block" id="inputType">
+                                    <div class="col-md-3 d-block directPurchhaseHiddenField" id="inputType">
                                         <div class="form-group">
                                             <label>Select Work Order Type :</label>
                                             @Html.DropDownListFor(model => model.MaterialTypeId, Model.MaterialTypeList as SelectList, "==Work Order Type==", new { id = "ddlMaterialTypeId", onchange = "GetSubtypeByTypeId()", @class = "form-control searchingDropdown", style = "width:100%" })
@@ -358,7 +358,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3 d-block" id="inputSubtype">
+                                    <div class="col-md-3 d-block directPurchhaseHiddenField" id="inputSubtype">
                                         <div class="form-group">
                                             <label>Select Work Order Subtype :</label>
                                             @Html.DropDownListFor(model => model.MaterialSubtypeId, Model.MaterialSubtypeList as SelectList, "==Work Order Subtype==", new { id = "ddlMaterialSubtypeId", onchange = "GetMaterialBySubtypeId()", @class = "form-control searchingDropdown", style = "width:100%" })
@@ -1002,8 +1002,11 @@
                     $("#ddlSupplierPaymentMethodEnumFK").removeClass("d-block").addClass("hidden");
                     $("#StockLocationField").removeClass("d-block").addClass("hidden");
                     $("#dPIsStockField").removeClass("hidden").addClass("d-block");
+                    $("#inputReceive").removeClass("hidden").addClass("d-block");
+                    $("#inputRemaining").removeClass("hidden").addClass("d-block");
                     $("#dPHasSupplierField").removeClass("hidden").addClass("d-block");
                     $(".directPurchhaseHiddenField").removeClass("d-block").addClass("hidden");
+                    $("#inputRequisition").removeClass("hidden").addClass("d-block");
                     $("#inputRequisition").removeClass("col-md-3").addClass("col-md-4");
                     $("#inputMaterial").removeClass("col-md-3").addClass("col-md-4");
                     $("#inputUnit").removeClass("col-md-3").addClass("col-md-4");
