--- a/KGERP/Views/BillRequisition/DirectorBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/DirectorBRApproveSlave.cshtml
@@ -189,9 +189,9 @@
 
                                         <tfoot>
                                             <tr>
-                                                @if (Model.BillRequisitionTypeId != (int)EnumBillRequisitionType.Overhead)
+                                                @if (Model.BillRequisitionTypeId == (int)EnumBillRequisitionType.Overhead)
                                                 {
-                                                    <td colspan="13" style="text-align: right !important">
+                                                    <td colspan="8" style="text-align: right !important">
                                                         <b>Total Amount : </b>
                                                     </td>
                                                     <td id="totalFooter" colspan="2" style="text-align: right !important">
@@ -200,7 +200,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <td colspan="8" style="text-align: right !important">
+                                                    <td colspan="13" style="text-align: right !important">
                                                         <b>Total Amount : </b>
                                                     </td>
                                                     <td id="totalFooter" colspan="2" style="text-align: right !important">
